--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "querystring-es3": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-multi-select-component": "^4.3.4",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
